# gina

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  fetch_assets.bat  tasks.todo
demo/: CMakeLists.txt  demo.cpp
engine/: CMakeLists.txt
engine/private/: gina.cpp
engine/private/core/: gina_command_system.cpp  gina_device.cpp  gina_fence.cpp  gina_frame_timer.cpp  gina_graphics_adapter.cpp  gina_input.cpp  gina_logger.cpp  gina_math.cpp  gina_string_utils.cpp  gina_swap_chain.cpp  gina_window.cpp
engine/public/: gina.h
engine/public/core/: gina_action.h  gina_assert.h  gina_command_system.h  gina_constants.h  gina_device.h  gina_fence.h  gina_frame_timer.h  gina_graphics_adapter.h  gina_input.h  gina_logger.h  gina_math.h  gina_non_copyable.h  gina_singleton.h  gina_string_utils.h  gina_swap_chain.h  gina_types.h  gina_window.h
tests/: CMakeLists.txt  gina_actions_tests.cpp  gina_math_tests.cpp  gina_tests.cpp
